# OpenWeatherMapClient

./: .gitignore  CMakeLists.txt  README.md  config.json
examples/: CMakeLists.txt  main.cpp
include/: WeatherClient.h  httpclient.hpp  weatherclient.hpp
src/: CMakeLists.txt  WeatherClient.cpp  client.cpp  httpclient.cpp  weatherclient.cpp
